<resources>
    <string name="app_name">NoteList</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="log_in_with_google">Login Google</string>
    <string name="log_in_with_apple">Login Apple</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="have_an_account_log_in">have an account? Log In</string>
    <string name="handphone">Handphone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="delete">delete</string>
    <string name="start_typing">Start Typing</string>
    <string name="username">Username</string>
    <string name="news_today">News Today</string>
    <string name="search_news">Search News</string>
    <string name="image">Image</string>
    <string name="new_password">New password</string>
    <string name="breaking_news">Breaking News</string>
</resources>