<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_animation" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
    <TextView
        style="@style/TextUtill.Heading"
        android:text="@string/log_in" />




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/EtBase"
            android:ems="10"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/EtBase"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        style="@style/TextUtill.SmallText"
        android:layout_gravity="end"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonUtills" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1" />

        <TextView
            style="@style/TextUtill.SmallText"
            android:text="@string/or" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/btn_google"-->
<!--            style="@style/Widget.Material3.Button.OutlinedButton.Icon"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/log_in_with_google"-->
<!--            android:textColor="@color/black"-->
<!--            app:icon="@drawable/google_logo" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_apple"-->
<!--            style="@style/Widget.Material3.Button.OutlinedButton.Icon"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/log_in_with_apple"-->
<!--            android:textColor="@color/black"-->
<!--            app:icon="@drawable/apple_logo" />-->


<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/tvRegister"
        style="@style/TextUtill.SmallText"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="60dp"
        android:text="@string/don_t_have_an_account_register" />


</androidx.appcompat.widget.LinearLayoutCompat>